tried to add in more animations, but hitting limits of out of the box materialize. jquery animation conflicts. Looked into fixing manually in css, but not working. May move on to bootstrap

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,10 +23,16 @@ footer {
 }*/
 
 .songCard {
-  /*overflow:hidden;*/
-  /*text-overflow:ellipsis;*/
-  /*white-space: nowrap;*/
   font-size: .85em;
+/*  display: block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;*/
+}
+
+.other {
+  display: block;
+  white-space: nowrap;
 }
 
 .queuedSong {
@@ -34,4 +40,9 @@ footer {
   /*text-overflow:ellipsis;*/
   /*white-space: nowrap;*/
   font-size: .85em;
+  margin-bottom: 0;
+}
+
+.closeIconBox {
+  padding: 0;
 }
